deploy/oaas/arango-version/oaas-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oaas-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "oc.oaas.10.131.36.40.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: object-controller
                port:
                  number: 80
    - host: "tm.oaas.10.131.36.40.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: task-manager
                port:
                  number: 80
    - host: "cds.10.131.36.40.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: content-delivery-service
                port:
                  number: 80
